--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,4 +1,8 @@
-developers:
+# -------------------------
+# ACTIVE DEVELOPERS SECTION
+# -------------------------
+- section: Active developers
+  users:
   - name: Jan Brezina
     email: jan.brezina
     github: jbrezmorf
@@ -7,16 +11,10 @@ developers:
     email: jan.stebel
     github: jstebel
 
-  - name:   Jan Hybs
-    email:  jan.hybs
-    github: janhybs
 
   - name: Radek Srb
     email: radek.srb
     github: radeksrb
-
-  - name: Pavel Richter
-    github: richtertul
 
   - name: Jan Gabriel
     email: jan.gabriel
@@ -34,8 +32,28 @@ developers:
     github: dflanderka
     # email: david.flanderka
 
+# -------------------------
+# FORMER DEVELOPERS SECTION
+# -------------------------
+- section: Former developers
+  users:
+  - name: Pavel Richter
+    github: richtertul
 
-mentions:
+# -------------------------
+# MAINTANERS SECTION
+# -------------------------
+- section: Maintainers
+  users:
+  - name:   Jan Hybs
+    email:  jan.hybs
+    github: janhybs
+
+# -------------------------
+# HONORABLE MENTIONS SECTION
+# -------------------------
+- section: Mentions
+  users:
   - Aleš Balvín
   - Milan Hokr
   - Jiří Hnídek
